syntax = "proto3";

import "com/fx/proto/messaging/TradeMessages.proto";

package com.fx.proto.services;

service TradeServices {

  rpc SubscribeTrades(stream com.fx.proto.messaging.TradesSubscriptionRequestMessage)
      returns (stream com.fx.proto.messaging.TradesSubscriptionResponseMessage);

}